--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -14,7 +14,7 @@
     --gray-500: #6b7280;
     --gray-700: #374151;
     --green-100: #dcfce7;
-    --green-200: #b4e6c7;
+    --green-200: #d5f8e1;
     --green-300: #5db87d;
     --red-50: #fef2f2;
     --red-500: #ef4444;
@@ -94,6 +94,7 @@ main {
     flex-direction: column;
     padding: 1rem;
     flex-grow: 1;
+    min-width: 550px;
 }
 
 footer {
@@ -125,7 +126,7 @@ footer {
 
 .summary {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem 1rem;
     align-items: center;
     padding: 0.5rem 1rem;
     margin: 1rem 0;
@@ -134,6 +135,7 @@ footer {
     color: var(--gray-500);
     text-shadow: var(--shadow-xs);
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .summary-item {
@@ -141,6 +143,7 @@ footer {
     align-items: center;
     gap: 0.5rem;
     line-height: 2rem;
+    white-space: nowrap;
 }
 
 .summary-item span {
@@ -225,7 +228,7 @@ button:focus {
    Table
 ============================ */
 .table-container {
-    overflow: hidden;
+    overflow-x: scroll;
     border-radius: var(--radius);
     background: var(--white);
     box-shadow: var(--shadow-xs);
